[metadata]
name = scheduler-worker
version = 1.0.0
summary = scheduler-worker
author = Zhoubingzheng
author-email = zhoubingzheng@sina.com
home-page = http://scheduler-worker.com
description-file = README.md
classifier =
    Environment :: Scheduler-Worker
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7

[files]
packages =
    scheduler_worker

[pbr]
autodoc_index_modules = True

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source

[egg_info]
tag_build =
tag_date = 0
tag_svn_revision = 0
